lectures kommer korrekt frem og man kan gå videre til andmeldelses siden

--- a/brugerSkema.html
+++ b/brugerSkema.html
@@ -45,20 +45,21 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li id="dropdownCourse" value="course.id"><a> </a></li>
+                    <li id="dropdownCourse" value="course.id" ><a></a></li>
                 </ul>
             </div>
         </div>
 
         <div class="container">
 
-            <div class="loginstyle">
-            </div>
+
 
             <div class="lectureframe">
                 <table class="table">
+
                     <thead>
                     <th>Id</th>
+                    <th>Fag</th>
                     <th>Type</th>
                     <th>Start</th>
                     <th>Slut</th>
@@ -71,10 +72,6 @@
             </div>
         </div>
     </div>
-</div>
-</div>
-</div>
-</div>
 </div>
 
 
