--- a/andmeldelser.html
+++ b/andmeldelser.html
@@ -24,6 +24,9 @@
 
         <ul class="nav nav-pills nav-stacked">
             <li role="presentation"><a href="bruger.html">Hjem</a></li>
+            <script>
+                SDK.Storage.remove("lectureID");
+            </script>
             <li role="presentation"><a href="brugerSkema.html">Skema</a></li>
             <li role="presentation"><a href="brugerAnd.html">Anmeldelser</a></li>
             <li role="presentation"><a href="login.html">Log ud</a></li>
