Kan vise reviews fra en bestemt lecture

--- a/andmeldelser.html
+++ b/andmeldelser.html
@@ -44,11 +44,12 @@
         <table class="table">
 
             <thead>
-            <th>Leksions ID</th>
             <th>Rating</th>
             <th>Kommentar</th>
             </thead>
+            <tbody id="lectureReviewBody">
 
+            </tbody>
         </table>
     </div>
 
@@ -57,7 +58,7 @@
 
 <script src="lib/js/jquery-3.1.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
-<script src="src/js/review.js"></script>
+<script src="src/js/userReview.js"></script>
 <script src="src/js/sdk.js"></script>
 
 
