Teacher delen er lavet. Mere eller mindre kopieret fra student delen, men tilpasset

--- a/teacherReview.html
+++ b/teacherReview.html
@@ -10,7 +10,6 @@
     <title>Title</title>
 </head>
 <body>
-
 <div class="container">
 
     <div class="logostyle">
@@ -23,10 +22,9 @@
         <div class="navbarstyle">
 
             <ul class="nav nav-pills nav-stacked">
-                <li role="presentation"><a href="bruger.html">Hjem</a></li>
-                <li role="presentation"><a href="brugerSkema.html">Skema</a></li>
-                <li role="presentation" class="active"><a href="brugerAnd.html">Anmeldelser</a></li>
-                <li role="presentation"><a href="login.html">Log ud</a></li>
+                <li role="presentation"><a href="teacher.html">Hjem</a></li>
+                <li role="presentation"><a href="teacherCourse.html">Skema</a></li>
+                <li role="presentation"><a id="logOut">Log ud</a></li>
             </ul>
         </div>
     </div>
@@ -36,7 +34,7 @@
 
     <div class="headers">
         <div class="page-header">
-            <h1>Dine anmeldeleser</h1>
+            <h1>Anmeldeleser</h1>
         </div>
     </div>
 
@@ -44,24 +42,26 @@
         <table class="table">
 
             <thead>
-            <th>Leksions ID</th>
             <th>Rating</th>
             <th>Kommentar</th>
             </thead>
             <tbody id="reviewBody">
 
             </tbody>
-
         </table>
+
+
     </div>
+
 
 </div>
 
 
 <script src="lib/js/jquery-3.1.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
-<script src="src/js/review.js"></script>
 <script src="src/js/sdk.js"></script>
+<script src="src/js/teacherReview.js"
+<script src="src/js/logout.js"></script>
 
 
 </body>
