--- a/user.html
+++ b/user.html
@@ -23,10 +23,10 @@
     <div class="navbarstyle">
 
         <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" class="active"><a href="bruger.html">Hjem</a></li>
-            <li role="presentation"><a href="brugerSkema.html">Skema</a></li>
-            <li role="presentation"><a href="brugerAnd.html">Anmeldelser</a></li>
-            <li role="presentation"><a href="login.html">Log ud</a></li>
+            <li role="presentation" class="active"><a href="user.html">Hjem</a></li>
+            <li role="presentation"><a href="userCourse.html">Skema</a></li>
+            <li role="presentation"><a href="userReview.html">Anmeldelser</a></li>
+            <li role="presentation"><a id="logOut">Log ud</a></li>
         </ul>
 
     </div>
@@ -65,6 +65,8 @@
 
 <script src="lib/js/jquery-3.1.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
+<script src="src/js/sdk.js"></script>
+<script src="src/js/logout.js"></script>
 
 </body>
 </html>
