--- a/userCourse.html
+++ b/userCourse.html
@@ -23,10 +23,10 @@
         <div class="navbarstyle">
 
             <ul class="nav nav-pills nav-stacked">
-                <li role="presentation"><a href="bruger.html">Hjem</a></li>
-                <li role="presentation" class="active"><a href="brugerSkema.html">Skema</a></li>
-                <li role="presentation"><a href="brugerAnd.html">Anmeldelser</a></li>
-                <li role="presentation"><a href="login.html">Log ud</a></li>
+                <li role="presentation"><a href="user.html">Hjem</a></li>
+                <li role="presentation" class="active"><a href="userCourse.html">Skema</a></li>
+                <li role="presentation"><a href="userReview.html">Anmeldelser</a></li>
+                <li role="presentation"><a id="logOut">Log ud</a></li>
             </ul>
 
         </div>
@@ -79,6 +79,8 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="src/js/sdk.js"></script>
 <script src="src/js/lecture.js"></script>
+<script src="src/js/logout.js"></script>
+
 
 
 </body>
