Rettet en enkelt linje i teacherReview

--- a/teacherReview.html
+++ b/teacherReview.html
@@ -60,7 +60,7 @@
 <script src="lib/js/jquery-3.1.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="src/js/sdk.js"></script>
-<script src="src/js/teacherReview.js"
+<script src="src/js/teacherReview.js"></script>
 <script src="src/js/logout.js"></script>
 
 
